Dark mode & light mode bug resolved

--- a/write-up/src/App.css
+++ b/write-up/src/App.css
@@ -682,6 +682,16 @@ video {
   bottom: .25em;
 }
 
+.top-\[4em\]
+{
+  top: 4em;
+}
+
+.left-\[40\%\]
+{
+  left: 40%;
+}
+
 .right-\[2em\]
 {
   right: 2em;
@@ -720,11 +730,6 @@ video {
 .left-0
 {
   left: 0px;
-}
-
-.top-\[4em\]
-{
-  top: 4em;
 }
 
 .right-5
@@ -855,11 +860,6 @@ video {
 .z-\[100\]
 {
   z-index: 100;
-}
-
-.-z-10
-{
-  z-index: -10;
 }
 
 .row-span-2
@@ -1141,19 +1141,14 @@ video {
   margin-bottom: 0px;
 }
 
+.ml-\[\.7em\]
+{
+  margin-left: .7em;
+}
+
 .-mt-\[2em\]
 {
   margin-top: -2em;
-}
-
-.ml-\[-\.25em\]
-{
-  margin-left: -.25em;
-}
-
-.mb-\[0em\]
-{
-  margin-bottom: 0em;
 }
 
 .ml-7
@@ -1231,9 +1226,19 @@ video {
   margin-bottom: 14em;
 }
 
+.ml-\[-\.25em\]
+{
+  margin-left: -.25em;
+}
+
 .mb-\[\.5em\]
 {
   margin-bottom: .5em;
+}
+
+.mb-\[0em\]
+{
+  margin-bottom: 0em;
 }
 
 .-mt-1
@@ -1491,9 +1496,14 @@ video {
   margin-bottom: 0.75rem;
 }
 
-.ml-\[\.7em\]
+.mr-\[0\.9em\]
 {
-  margin-left: .7em;
+  margin-right: 0.9em;
+}
+
+.ml-\[\.6em\]
+{
+  margin-left: .6em;
 }
 
 .mt-\[0\.3em\]
@@ -1504,6 +1514,16 @@ video {
 .ml-\[-1\.5em\]
 {
   margin-left: -1.5em;
+}
+
+.ml-\[1\.4em\]
+{
+  margin-left: 1.4em;
+}
+
+.-ml-\[1em\]
+{
+  margin-left: -1em;
 }
 
 .mt-\[\.2em\]
@@ -1554,11 +1574,6 @@ video {
 .ml-\[1\.3em\]
 {
   margin-left: 1.3em;
-}
-
-.-ml-\[1em\]
-{
-  margin-left: -1em;
 }
 
 .mb-\[4em\]
@@ -1676,6 +1691,11 @@ video {
   margin-left: 10em;
 }
 
+.mb-\[10em\]
+{
+  margin-bottom: 10em;
+}
+
 .mt-\[-1\.25em\]
 {
   margin-top: -1.25em;
@@ -1684,11 +1704,6 @@ video {
 .ml-\[-7em\]
 {
   margin-left: -7em;
-}
-
-.mb-\[10em\]
-{
-  margin-bottom: 10em;
 }
 
 .block
@@ -1888,11 +1903,6 @@ video {
   width: 100%;
 }
 
-.w-\[75\%\]
-{
-  width: 75%;
-}
-
 .w-\[70\%\]
 {
   width: 70%;
@@ -1901,6 +1911,11 @@ video {
 .w-1\/2
 {
   width: 50%;
+}
+
+.w-\[10em\]
+{
+  width: 10em;
 }
 
 .w-\[30em\]
@@ -2009,14 +2024,14 @@ video {
   width: 240px;
 }
 
+.w-\[45\%\]
+{
+  width: 45%;
+}
+
 .w-\[10\%\]
 {
   width: 10%;
-}
-
-.w-\[10em\]
-{
-  width: 10em;
 }
 
 .w-\[20em\]
@@ -2032,11 +2047,6 @@ video {
 .w-\[13em\]
 {
   width: 13em;
-}
-
-.w-\[45\%\]
-{
-  width: 45%;
 }
 
 .min-w-max
@@ -2323,6 +2333,11 @@ video {
 .rounded-xl
 {
   border-radius: 0.75rem;
+}
+
+.rounded-\[1\.5em\]
+{
+  border-radius: 1.5em;
 }
 
 .rounded
@@ -2644,6 +2659,11 @@ video {
   padding: 1.75rem;
 }
 
+.p-\[0\.5em\]
+{
+  padding: 0.5em;
+}
+
 .p-6
 {
   padding: 1.5rem;
@@ -2672,11 +2692,6 @@ video {
 .p-0
 {
   padding: 0px;
-}
-
-.p-\[0\.5em\]
-{
-  padding: 0.5em;
 }
 
 .py-\[1em\]
@@ -2727,12 +2742,6 @@ video {
   padding-right: 1em;
 }
 
-.py-\[\.5em\]
-{
-  padding-top: .5em;
-  padding-bottom: .5em;
-}
-
 .px-\[1\.5em\]
 {
   padding-left: 1.5em;
@@ -2767,6 +2776,12 @@ video {
 {
   padding-left: .5em;
   padding-right: .5em;
+}
+
+.py-\[\.5em\]
+{
+  padding-top: .5em;
+  padding-bottom: .5em;
 }
 
 .py-4
@@ -2950,11 +2965,6 @@ video {
 .pt-\[4em\]
 {
   padding-top: 4em;
-}
-
-.pt-5
-{
-  padding-top: 1.25rem;
 }
 
 .pl-10
@@ -4394,6 +4404,11 @@ video {
     margin-bottom: 1em;
   }
 
+  .lg\:ml-\[1\.25em\]
+{
+    margin-left: 1.25em;
+  }
+
   .lg\:-mt-\[1\.7em\]
 {
     margin-top: -1.7em;
@@ -4559,6 +4574,21 @@ video {
     margin-top: .5em;
   }
 
+  .lg\:ml-\[\.2em\]
+{
+    margin-left: .2em;
+  }
+
+  .lg\:-ml-\[1\.5em\]
+{
+    margin-left: -1.5em;
+  }
+
+  .lg\:ml-\[\.1em\]
+{
+    margin-left: .1em;
+  }
+
   .lg\:-mt-\[\.1em\]
 {
     margin-top: -.1em;
@@ -4679,6 +4709,11 @@ video {
     margin-left: -7em;
   }
 
+  .lg\:mb-\[0em\]
+{
+    margin-bottom: 0em;
+  }
+
   .lg\:mb-\[2em\]
 {
     margin-bottom: 2em;
@@ -4702,11 +4737,6 @@ video {
   .lg\:ml-\[35em\]
 {
     margin-left: 35em;
-  }
-
-  .lg\:mb-\[0em\]
-{
-    margin-bottom: 0em;
   }
 
   .lg\:block
@@ -4819,6 +4849,13 @@ video {
     width: 15em;
   }
 
+  .lg\:w-fit
+{
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
   .lg\:w-\[45em\]
 {
     width: 45em;
@@ -4867,13 +4904,6 @@ video {
   .lg\:w-20
 {
     width: 5rem;
-  }
-
-  .lg\:w-fit
-{
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
   }
 
   .lg\:w-\[2em\]
@@ -5041,19 +5071,9 @@ video {
     overflow-x: hidden;
   }
 
-  .lg\:rounded-lg
-{
-    border-radius: 0.5rem;
-  }
-
   .lg\:rounded-xl
 {
     border-radius: 0.75rem;
-  }
-
-  .lg\:border
-{
-    border-width: 1px;
   }
 
   .lg\:border-\[\.4px\]
@@ -5069,6 +5089,11 @@ video {
   .lg\:border-\[\.2px\]
 {
     border-width: .2px;
+  }
+
+  .lg\:border
+{
+    border-width: 1px;
   }
 
   .lg\:bg-white
@@ -5350,11 +5375,5 @@ video {
 {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
-
-  .lg\:before\:relative::before
-{
-    content: var(--tw-content);
-    position: relative;
   }
 }
